add features section

--- a/style.css
+++ b/style.css
@@ -5,7 +5,11 @@
 }
 
 body {
-    background-color: red;
-    color: white;
+    background-color: beige;
+    color: brown;
     text-align: center;
+}
+
+i {
+    color: green;
 }
